--- a/ai-tools/windsurf.mdx
+++ b/ai-tools/windsurf.mdx
@@ -13,7 +13,7 @@ Configure Windsurf's Cascade AI assistant to help you write and maintain documen
 
 ## Workspace rules
 
-Create workspace rules that provide Windsurf with context about your documentation project and standards.
+Create workspace rules that provide Windsurf with context about your documentation project and standards.a
 
 Create `.windsurf/rules.md` in your project root:
 
