--- a/development.mdx
+++ b/development.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Development"
-description: "Preview chsanges locally to update your docs"
+description: "Preview changes locally to update your docs"
 ---
 
 <Info>
