feat: initial docs

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,97 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Lemon Cash Mini App SDK"
+description: "Build powerful mini apps that integrate seamlessly with the Lemon Cash mobile application"
 ---
 
-## Setting up
+## Build Mini Apps for Lemon Cash
 
-Get your documentation site up and running in minutes.
+Create powerful mini applications that run inside the Lemon Cash mobile app using React Native WebView technology. Our SDK provides everything you need to build secure, interactive mini apps that can authenticate users, handle transactions, and interact with smart contracts.
 
 <Card
-  title="Start here"
+  title="Get started"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Build your first mini app in under 10 minutes.
 </Card>
 
-## Make it yours
+## Core Features
 
-Design a docs site that looks great and empowers your users.
+Build mini apps with powerful capabilities that integrate seamlessly with Lemon Cash.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Authentication"
+    icon="key"
+    href="/concepts/authentication"
   >
-    Edit your docs locally and preview them in real time.
+    Securely authenticate users with wallet signatures and nonce verification.
   </Card>
   <Card
-    title="Customize your site"
+    title="Transactions"
+    icon="wallet"
+    href="/concepts/transactions"
+  >
+    Handle deposits, withdrawals, and smart contract interactions.
+  </Card>
+  <Card
+    title="WebView Communication"
+    icon="message-circle"
+    href="/concepts/webview-communication"
+  >
+    Communicate between your mini app and the native Lemon Cash app.
+  </Card>
+  <Card
+    title="Transaction Components"
     icon="palette"
-    href="/essentials/settings"
+    href="/components/deposit-button"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
+    Use pre-built transaction components for deposits, withdrawals, and smart contracts.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Quick Start Guide
 
-Everything you need to create world-class documentation.
+Get up and running with the Mini App SDK in minutes.
 
 <Columns cols={2}>
   <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
+    title="Installation"
+    icon="download"
+    href="/installation"
   >
-    Use MDX to style your docs pages.
+    Install and configure the SDK in your project.
   </Card>
   <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
+    title="Authentication Hook"
+    icon="key"
+    href="/hooks/use-authenticate"
   >
-    Add sample code to demonstrate how to use your product.
+    Learn how to authenticate users in your mini app.
   </Card>
   <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
+    title="Deposit Button"
+    icon="wallet"
+    href="/components/deposit-button"
   >
-    Display images and other media.
+    Add deposit functionality to your mini app.
   </Card>
   <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
+    title="API Reference"
+    icon="book"
+    href="/api-reference/types"
   >
-    Write once and reuse across your docs.
+    Explore the complete API reference and types.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Ready to build?
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="View examples"
+  icon="code"
+  href="/api-reference/examples/authentication"
 >
-  Browse our showcase of exceptional documentation sites.
+  Explore complete examples and see the SDK in action.
 </Card>
